--- a/aboutMe.css
+++ b/aboutMe.css
@@ -28,20 +28,20 @@ body{
 
     }
     #nameheader{
-        padding-top: 150px;
+        padding-top: 100px;
         padding-left: 50px;
-        align-self: flex-end;
         margin-bottom: 0;
     }
     #nav-ul{
     list-style: none;
     display: flex;
     align-self: flex-end;
-    padding-bottom: 0px;
-    justify-content: flex-end;
+    padding-bottom: 0px; 
     margin-bottom: 0;
-    padding-left: 200px;
-    }
+    padding-left: 450px;
+    justify-content: flex-end;
+    font-size: 25px;
+      }
      
 
   #nav-ul li{
@@ -53,8 +53,7 @@ body{
   main{
     margin-top: 20px;
   }  
-  
-    
+      
     #img-pic{
          display: inline;
         width: 307px;
@@ -74,6 +73,8 @@ a{
        margin-top: -150px;
         color: blue;
         font-size: larger;
+        padding-left: 10px ;
+        
     }
     #keyskills{
         padding-top: 170px;
@@ -95,3 +96,54 @@ a{
         color: blue;
         font-size: larger;  
     }
+    p{
+padding-left: 10px;
+    }
+    
+/*where Queries Start*/
+
+@media screen and (max-width: 768px) {
+ #nav{
+    color: blue;
+    
+ }
+  #nav-ul  {
+   padding-right:  20px;
+   padding-left: 10px;
+   font-size: 16px;
+   
+  
+  }  
+  #nav-ul li{
+    color: blue;
+   
+    
+  }
+  #nameheader{
+    padding-top: 75px;
+    padding-left: 15px;
+ }}
+ @media  (max-width:480px) {
+   #nav-ul li  {  
+     justify-content: center;
+    align-items: center;  
+    font-size: 12px; 
+    padding: 0px 6px 0px 6px;
+    
+   }
+   #img-pic{
+    display: inline;
+   width: 157px;
+   height: 259px; 
+   padding-right: 0px;
+   margin-top: 0px;
+   float: right;
+   padding-top: 0px;
+
+
+
+         
+}
+   
+    
+ }
